# tta-ai-ready

./: .gitignore  404.html  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  catalog.jsonld  index.html  mkdocs.yml  sitemap.xml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
docs/: README.md  getting-started.md  glossary.md  index.md  lifecycle.md  validate.md
framework/: index.html
getting-started/: index.html
glossary/: index.html
inventory/: croissant.csv  datacite.csv  dcat-v3.csv  dcmi-type.csv  dcterms.csv  dqv.csv  iso-codes.csv  master_inventory.csv  prov-o.csv  re3data.csv  schema-org.csv
lifecycle/: index.html
manuals/: index.html
mappings/: aird-datatype-to-schemaorg.ttl  tta-0976_enumerations_mapping.csv  tta-0976_review_sample.csv  tta-0976_x_components.csv
methodology/: index.html
pr-18/: 404.html  index.html  sitemap.xml
pr-19/: 404.html  index.html  sitemap.xml
pr-20/: 404.html  index.html  sitemap.xml
pr-21/: 404.html  index.html  sitemap.xml
pr-22/: 404.html  index.html  sitemap.xml
pr-23/: 404.html  index.html  sitemap.xml
pr-24/: 404.html  index.html  sitemap.xml
pr-25/: 404.html  index.html  sitemap.xml
pr-26/: 404.html  index.html  sitemap.xml
pr-27/: 404.html  index.html  sitemap.xml
pr-28/: 404.html  index.html  sitemap.xml
profiles/: README.md
reference/: index.html
tools/validator/: README.md  pyproject.toml
tools/validator/src/tta_validator/: __init__.py  __main__.py  validate.py  verify_mappings.py
tools/validator/tests/: test_verify_mappings.py
(+438 files in other folders)
